--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://arkalsekar.in/
+baseURL: https://blog-arkalsekar.netlify.app/
 languageCode: en-us
 title: Blogs
 theme: ["PaperMod"]
